syntax = "proto3";

package payment.v1;

option go_package = "github.com/fvaiiii/ordering_products/shared/pkg/proto/payment/v1";

enum PaymentMethod {
    PaymentMethod_UNKNOWN = 0;
    PaymentMethod_CARD = 1;
    PaymentMethod_SBP = 2;
    PaymentMethod_CREDIT_CARD = 3;
}

message TransactionUuidRequest {
    string order_uuid = 1;
    string user_uuid = 2;
    PaymentMethod payment_method = 3;
}

message TransactionUuidResponse {
    string transaction_uuid = 1;
}

service PaymentService {
    rpc PayOrder(TransactionUuidRequest) returns (TransactionUuidResponse);
}

